--- a/src/Styles/entrycard.scss
+++ b/src/Styles/entrycard.scss
@@ -1,4 +1,4 @@
-.result-card, .entry-card{
+.entry-card{
     flex: 1 1 33.333%;
     max-width: 230px;
     margin-bottom: 1rem ;
@@ -9,7 +9,6 @@
 
     .poster {
         display: block;
-        margin-bottom: 16px;
 
         img {
             display: block;
@@ -29,60 +28,71 @@
     }
 }
 
-.result-card{
-    &:hover {
-        .poster {
-            img {
-                box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
-                transform: scale(1.05);
-            }
-        }
-    }
+// .result-card{
+//     &:hover {
+//         .poster {
+//             img {
+//                 box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
+//                 transform: scale(1.05);
+//             }
+//         }
+//     }
 
-}
-
-.entry-card{
-    .poster {
-        position: relative;  
-        width:100%;
-        max-width:200px;
-    }
-    .poster:before {
-      content:"";
-      position:absolute;
-      width:100%;
-      height:100%;
-      top:0;left:0;right:0;
-      background-color:rgba(0,0,0,0);
-    }
-    .poster:hover::before {
-      background-color:rgba(0,0,0,0.5);
-    }
-    .poster img {
-        display:block;
-    }
-
-    .container .inner-card-controls {
-        display: flex;
-        flex-direction: row;
-    } 
-
-    .container .inner-card-controls {
-        position: absolute;
-        top: 60%;
-        left: 50%;
-        transform: translate(-112%, 200%);
-        opacity:0;
-    } 
-    .container:hover .inner-card-controls{   
-        opacity: 1;
-    }
-}
+// }
 
 .inner-card-controls{
-    margin-left: 78px;
+    display: flex;
+    justify-content: center;
 }
 
-.ctrl-btn{
-    padding: 12px;
+.inner-card-controls > *{
+    margin:2px;
+}
+
+@media only screen and (min-width: 800px){
+    .entry-card{
+        .poster {
+            position: relative;  
+            width:100%;
+            max-width:200px;
+        }
+        .poster:before {
+          content:"";
+          position:absolute;
+          width:100%;
+          height:100%;
+          top:0;left:0;right:0;
+          background-color:rgba(0,0,0,0);
+        }
+        .poster:hover::before {
+          background-color:rgba(0,0,0,0.5);
+        }
+        .poster img {
+            display:block;
+        }
+    
+        .container .inner-card-controls {
+            display: flex;
+            flex-direction: row;
+        } 
+    
+        .container .inner-card-controls {
+            position: absolute;
+            top: 60%;
+            left: 50%;
+            transform: translate(-112%, 200%);
+            opacity:0;
+        } 
+        .container:hover .inner-card-controls{   
+            opacity: 1;
+        }
+    }
+    
+    .inner-card-controls{
+        margin-left: 78px;
+    }
+    
+    .ctrl-btn{
+        padding: 12px;
+    }
 }
