--- a/src/Styles/header.scss
+++ b/src/Styles/header.scss
@@ -83,4 +83,10 @@ header .nav-btn{
     nav a{
         font-size: 1.5rem;
     }
+
+    .entry-card{
+        .poster {
+            position: static;  
+        }
+    }
 }
